--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ enableInlineShortcodes = true
 ignoreErrors = ["error-remote-getjson"]
 
 # ------------------------------
-theme = "hugo-paper"
+theme = "hugo-theme-stack-3.5.0"
 title = "Paper"
 
 [params]
