--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ title = "Paper"
 [[menu.main]]
     name = "Blog"
     weight = 1
-    url  = "/post/"
+    url  = "/posts/"
 [[menu.main]]
     name = "About"
     weight = 2
