--- a/config.toml
+++ b/config.toml
@@ -24,11 +24,11 @@ title = "Paper"
 [[menu.main]]
     name = "Blog"
     weight = 1
-    url  = "/post/"
+    url  = "/posts/"
 [[menu.main]]
     name = "About"
     weight = 2
-    url = "/about/"
+    url = "/abouts/"
 [[menu.main]]
     name = "Projects"
     weight = 3
